assets/css/home.css
/* Begin of Cover */
.cover {
    background-color: var(--dark-background);
    height: fit-content;
    min-height: 100vh;
}

.cover img {
    width: 100%;
    max-height: 75vh;
    object-fit: fill;
}

.quote-box {
    max-width: 800px;
    margin: 0 auto;
    text-align: center;
}

.quote-text {
    /* font-size: 2rem; */
    color: var(--bright-text);
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.quote-author {
    font-family: linka;
    /* font-size: 2.5rem; */
    color: var(--highlight-background);
}

.see-work, .see-work:hover {
    color: white;
    background-color: var(--highlight-text);
    padding: 1rem 4rem;
    border-radius: 1rem;
    text-decoration: none;
}
/* End of cover */

/* Presentation texts */
article {
    color: var(--text-color);
    margin-top: 1.25rem;
}

h1, h2 {
    font-family: linka;
    color: var(--highlight-text);
}

.background-text-container {
    position: relative;
}

.background-text {
    font-family: linka;
    font-size: 8rem;
    color: var(--highlight-text);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: -1;
    overflow: hidden;
}

.vertical {
    margin-top: auto;
    font-family: linka;
    color: var(--highlight-text);
    transform: rotate(-90deg) translate(40%, 50%);
}

/* End of Presentation texts */

